# esp32-axum-ws

./: .env.default  .gitignore  Cargo.toml  README.md  build-client.sh  build.rs  espflash.toml  sdkconfig.defaults
.cargo/: config.toml
client/: .eslintrc  index.html  package.json  tsconfig.json  vite.config.ts
client/src/: app.module.scss  app.tsx  connection.ts  connectionProvider.tsx  connectionStore.ts  index.scss  main.tsx  messageParser.ts
client/tools/: checkForChanges.js
client/types/: global.d.ts
src/: config.rs  led.rs  main.rs  server.rs  wifi.rs
